--- a/admin/index.html
+++ b/admin/index.html
@@ -75,33 +75,51 @@
                     return;
                 }
 
-                if (users.role === "admin" || users.role === "master") {
-                    authStatus.textContent = "管理者として認証されました。";
-                    // 管理者用機能を表示するコードをここに追加
-                    const adminFeatures = document.createElement("section");
-                    adminFeatures.innerHTML = `
+                switch (users.role) {
+                    case "master":
+                    case "admin":
+                        authStatus.textContent = "管理者として認証されました。";
+                        // 管理者用機能を表示するコードをここに追加
+                        const adminFeatures = document.createElement("section");
+                        adminFeatures.innerHTML = `
                         <h2>管理者用機能</h2>
+                        <ul>
+                            <li><a href="./user_manage/"><i class="fa-solid fa-user"></i>ユーザー管理</a></li>
+                            <li><a href="./content_manage/"><i class="fa-solid fa-file"></i>コンテンツ管理</a></li>
+                            <li><a href="./website_allow/"><i class="fa-solid fa-check"></i>ウェブサイト許可管理</a></li>
+                            <li><a href="./request_music/"><i class="fa-solid fa-music"></i>リクエスト曲管理</a></li>
+                        </ul>
+                    `;
+                        document.querySelector("main").appendChild(adminFeatures);
+                        break;
+                    case "manager":
+                        authStatus.textContent = "サイトマネージャーとして認証されました。";
+                        // コンテンツ管理者用機能を表示するコードをここに追加
+                        const contentManagerFeatures = document.createElement("section");
+                        contentManagerFeatures.innerHTML = `
+                        <h2>サイトマネージャー用機能</h2>
                         <ul>
                             <li><a href="./user_manage/">ユーザー管理</a></li>
                             <li><a href="./content_manage/">コンテンツ管理</a></li>
                             <li><a href="./website_allow/">ウェブサイト許可管理</a></li>
-                            <li><a href="./request_music/">リクエスト曲管理</a></li>
                         </ul>
                     `;
-                    document.querySelector("main").appendChild(adminFeatures);
-                } else if (users.role === "request_music_manager") {
-                    authStatus.textContent = "リクエスト曲管理者として認証されました。";
-                    // リクエスト曲管理者用機能を表示するコードをここに追加
-                    const musicManagerFeatures = document.createElement("section");
-                    musicManagerFeatures.innerHTML = `
+                        document.querySelector("main").appendChild(contentManagerFeatures);
+                        break;
+                    case "request_music_manager":
+                        authStatus.textContent = "リクエスト曲管理者として認証されました。";
+                        // リクエスト曲管理者用機能を表示するコードをここに追加
+                        const musicManagerFeatures = document.createElement("section");
+                        musicManagerFeatures.innerHTML = `
                         <h2>リクエスト曲管理者用機能</h2>
                         <ul>
                             <li><a href="./request_music/">リクエスト曲管理</a></li>
                         </ul>
                     `;
-                    document.querySelector("main").appendChild(musicManagerFeatures);
-                } else {
-                    authStatus.textContent = "管理者権限がありません。";
+                        document.querySelector("main").appendChild(musicManagerFeatures);
+                        break;
+                    default:
+                        authStatus.textContent = "管理者権限がありません。";
                 }
             } else {
                 authStatus.textContent = "ログインしていません。";
