--- a/admin/content_manage/index.html
+++ b/admin/content_manage/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="../../script/notice/notice.css">
-    <link rel="stylesheet" href="../../script/contentManager/contentManager.css">
     <style>
         .content-list {
             display: grid;
@@ -24,6 +23,109 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
+        }
+
+        #table-modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.4);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            margin: 0;
+        }
+
+        #table-modal-inner {
+            width: 90%;
+            height: 90%;
+            border-radius: 10px;
+            overflow: auto;
+            position: relative;
+        }
+
+        #table-close-btn {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        /* 全体を横スクロール可能にする */
+        #table-container {
+            background-color: white;
+            overflow-x: auto;
+            display: grid;
+            grid-template-rows: auto;
+            border-collapse: collapse;
+        }
+
+        /* ヘッダー */
+        .table-header {
+            display: grid;
+            grid-template-columns: repeat(3, 5rem) repeat(4, minmax(6rem, 20rem));
+            background-color: #3498db;
+            color: white;
+            font-weight: bold;
+        }
+
+        .table-header>div {
+            padding: 0.5rem;
+            text-align: center;
+            border-right: 1px solid #ddd;
+        }
+
+        .table-header>div:hover {
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+        }
+
+        /* データ部 */
+        .table-body {
+            display: grid;
+            grid-template-rows: auto;
+        }
+
+        /* 行（ヘッダーと同じ列幅に揃える） */
+        .table-row {
+            display: grid;
+            grid-template-columns: repeat(3, 5rem) repeat(4, minmax(20rem, 20rem));
+            border-bottom: 1px solid #ddd;
+        }
+
+        /* 通常セル */
+        .table-cell {
+            padding: 8px;
+            border-right: 1px solid #ddd;
+            box-sizing: border-box;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        /* 一番右のセル */
+        .table-row .table-cell:last-child,
+        .table-header>div:last-child {
+            border-right: none;
+        }
+
+        /* 長文用（折り返し） */
+        .table-cell.wrap-content {
+            white-space: normal;
+            overflow: visible;
+            text-overflow: unset;
+            word-break: break-word;
+        }
+
+        .table-control {
+            display: flex;
+            gap: 10px;
+            padding: 10px;
+            background-color: #f4f4f4;
+            border-bottom: 1px solid #ddd;
         }
     </style>
     <!--web情報-->
@@ -67,7 +169,10 @@
             <a href="#post-list">投稿一覧</a>
 
             <label for="search-box">検索：<input type="text" id="search-box" placeholder="コンテンツを検索..."></label>
-            <button id="search-btn">検索</button>
+            <button id="search-btn">検索</button><br>
+
+            <button id="show-table-btn">テーブル表示</button>
+
             <hr>
 
             <div id="content-list" class="content-list">
@@ -79,6 +184,20 @@
                 </div>
                 <div id="post-list" class="content-list">
                     <h3>投稿一覧</h3>
+                </div>
+            </div>
+
+            <!-- テーブル表示モーダル -->
+            <div id="table-modal">
+                <div id="table-modal-inner">
+                    <button id="table-close-btn">✕</button>
+                    <div class="table-control">
+                        <input type="text" id="table-search-box" placeholder="テーブル内を検索...">
+                        <button id="table-search-btn">検索</button>
+                        <button id="delete-select-content">一括削除</button>
+                    </div>
+                    <div id="table-container">
+                    </div>
                 </div>
             </div>
         </section>
@@ -125,11 +244,11 @@
                 const questionItem = document.createElement("div");
                 questionItem.className = "content-item";
                 questionItem.innerHTML = `
-                    <strong>ID: </strong><span>${question.id}</span><br>
-                    <strong>作成者: </strong><span>${question.username}</span><br>
-                    <strong>タイトル: </strong><span>${question.title}</span><br>
-                    <strong>内容: </strong><span>${question.content}</span><br>
-                    <strong>作成日時: </strong><span>${question.created_at}</span><br>
+                    <strong class="label-strong">ID: </strong><span>${question.id}</span><br>
+                    <strong class="label-strong">作成者: </strong><span>${question.username}</span><br>
+                    <strong class="label-strong">タイトル: </strong><span>${question.title}</span><br>
+                    <strong class="label-strong">内容: </strong><span>${question.content}</span><br>
+                    <strong class="label-strong">作成日時: </strong><span>${question.created_at}</span><br>
                     <button data-question-id="${question.id}" class="edit-entry" style="width: fit-content;">質問編集</button>
                     <button data-question-id="${question.id}" class="delete-entry" style="width: fit-content;">質問削除</button>
                     <button data-question-id="${question.id}" class="view-entry" style="width: fit-content;">質問表示</button>
@@ -141,11 +260,11 @@
                 const answerItem = document.createElement("div");
                 answerItem.className = "content-item";
                 answerItem.innerHTML = `
-                    <strong>ID: </strong><span>${answer.id}</span><br>
-                    <strong>作成者: </strong><span>${answer.username}</span><br>
-                    <strong>質問ID: </strong><span>${answer.question_id}</span><br>
-                    <strong>内容: </strong><span>${answer.content}</span><br>
-                    <strong>作成日時: </strong><span>${answer.created_at}</span><br>
+                    <strong class="label-strong">ID: </strong><span>${answer.id}</span><br>
+                    <strong class="label-strong">作成者: </strong><span>${answer.username}</span><br>
+                    <strong class="label-strong">質問ID: </strong><span>${answer.question_id}</span><br>
+                    <strong class="label-strong">内容: </strong><span>${answer.content}</span><br>
+                    <strong class="label-strong">作成日時: </strong><span>${answer.created_at}</span><br>
                     <button data-answer-id="${answer.id}" class="edit-entry" style="width: fit-content;">回答編集</button>
                     <button data-answer-id="${answer.id}" class="delete-entry" style="width: fit-content;">回答削除</button>
                     <button data-answer-id="${answer.id}" class="view-entry" style="width: fit-content;">回答表示</button>
@@ -157,11 +276,11 @@
                 const postItem = document.createElement("div");
                 postItem.className = "content-item";
                 postItem.innerHTML = `
-                    <strong>ID: </strong><span>${post.id}</span><br>
-                    <strong>作成者: </strong><span>${post.username}</span><br>
-                    <strong>タイトル: </strong><span>${post.title}</span><br>
-                    <strong>内容: </strong><span>${post.content}</span><br>
-                    <strong>作成日時: </strong><span>${post.created_at}</span><br>
+                    <strong class="label-strong">ID: </strong><span>${post.id}</span><br>
+                    <strong class="label-strong">作成者: </strong><span>${post.username}</span><br>
+                    <strong class="label-strong">タイトル: </strong><span>${post.title}</span><br>
+                    <strong class="label-strong">内容: </strong><span>${post.content}</span><br>
+                    <strong class="label-strong">作成日時: </strong><span>${post.created_at}</span><br>
                     <button data-post-id="${post.id}" class="edit-entry" style="width: fit-content;">投稿編集</button>
                     <button data-post-id="${post.id}" class="delete-entry" style="width: fit-content;">投稿削除</button>
                     <button data-post-id="${post.id}" class="view-entry" style="width: fit-content;">投稿表示</button>
@@ -249,6 +368,209 @@
                     }
                 });
             });
+
+            // モーダル操作
+            const tableModal = document.getElementById("table-modal");
+            const tableContainer = document.getElementById("table-container");
+            document.getElementById("table-close-btn").addEventListener("click", () => {
+                tableModal.style.display = "none";
+            });
+
+            function generateTable() {
+                const items = document.querySelectorAll(".content-item");
+
+                const headers = ["I/O", "ID", "種類", "作成者", "タイトル / 質問ID", "内容", "作成日時"];
+                let html = "<div class='table-header'>";
+
+                headers.forEach((h, index) => html += `<div data-col=${index}>${h}</div>`);
+                html += "</div><div class='table-body'>";
+
+                items.forEach(card => {
+                    // --- 全ラベルと値をまとめて取得 ---
+                    const entries = {};
+                    const labels = card.querySelectorAll("strong.label-strong");
+
+                    labels.forEach(label => {
+                        const key = label.textContent.trim();             // 例: "ID:", "作成者:", ...
+                        const valueEl = label.nextElementSibling;         // 値のノード
+                        const value = valueEl ? valueEl.textContent.trim() : "";
+                        entries[key] = value;
+                    });
+
+                    // --- 種類判定 ---
+                    let type = "不明";
+                    if (card.querySelector("button[data-question-id]")) type = "質問";
+                    if (card.querySelector("button[data-answer-id]")) type = "回答";
+                    if (card.querySelector("button[data-post-id]")) type = "投稿";
+
+                    // --- テーブル行を追加（ラベル名をキーにして値だけ採用） ---
+                    html += `
+            <div class="table-row">
+                <div class="table-cell"><input type="checkbox" id="table-selection"></div>
+                <div class="table-cell">${entries["ID:"] || ""}</div>
+                <div class="table-cell">${type}</div>
+                <div class="table-cell">${entries["作成者:"] || ""}</div>
+                <div class="table-cell">${entries["タイトル:"] || entries["質問ID:"] || ""}</div>
+                <div class="table-cell wrap-content">${entries["内容:"] || ""}</div>
+                <div class="table-cell">${entries["作成日時:"] || ""}</div>
+            </div>
+        `;
+                });
+
+                html += "</div>";
+                return html;
+            }
+
+            document.getElementById("show-table-btn").addEventListener("click", () => {
+                tableContainer.innerHTML += generateTable();
+                tableModal.style.display = "flex";
+
+                initSort();
+
+                document.getElementById("table-search-box").addEventListener("keydown", (event) => {
+                    if (event.key === "Enter" && document.activeElement === document.getElementById("table-search-box")) {
+                        filterTable();
+                    }
+                });
+
+                document.getElementById("table-search-btn").addEventListener("click", filterTable);
+
+                document.getElementById("delete-select-content").addEventListener("click", async () => {
+                    const tableContainer = document.getElementById("table-container");
+                    const tableRows = tableContainer.querySelectorAll(".table-row");
+
+                    for (const el of tableRows) {
+                        const checkbox = el.querySelector('input[type=checkbox]');
+                        const isChecked = checkbox?.checked;
+                        const cells = el.querySelectorAll(".table-cell");
+
+                        if (isChecked) {
+                            // ID を取得
+                            const id = cells[1].textContent.trim();
+
+                            // 種類から Supabase のテーブル名を決定
+                            const table = (() => {
+                                switch (cells[2].textContent.trim()) {
+                                    case "質問":
+                                        return "questions";
+                                    case "回答":
+                                        return "answers";
+                                    case "投稿":
+                                        return "BBS";
+                                    default:
+                                        return undefined;
+                                }
+                            })();
+
+                            // テーブルが判別できなければスキップ
+                            if (!table) {
+                                console.error("対応するテーブルがありません:", cells[2].textContent);
+                                return;
+                            }
+
+                            // 削除
+                            const { error: deleteError } = await supabase
+                                .from(table)
+                                .delete()
+                                .eq("id", id);
+
+                            if (deleteError) {
+                                console.error(deleteError);
+                                alert("削除中にエラーが発生しました");
+                                continue;
+                            }
+
+                            // DOM から削除
+                            el.remove();
+                        }
+                    }
+                });
+            });
+
+
+            // ソート状態管理
+            const sortState = {};
+
+            // 初期化関数
+            function initSort() {
+                const header = document.querySelector(".table-header");
+                if (!header) {
+                    console.error("table-header が見つかりません");
+                    return;
+                }
+
+                // ヘッダー内の各列要素を初期化（data-col を使う想定）
+                const headers = Array.from(header.querySelectorAll("div[data-col]"));
+                headers.forEach((el) => {
+                    const idx = Number(el.dataset.col);
+                    sortState[idx] = "none";
+
+                    // ここではイベント委譲のため何もしない（下で親にリスナをつける）
+                });
+
+                // イベント委譲：ヘッダーの親に一つだけ click を登録
+                header.addEventListener("click", (event) => {
+                    const colEl = event.target.closest("div[data-col]");
+                    if (!colEl || !header.contains(colEl)) return;
+
+                    const index = Number(colEl.dataset.col);
+                    handleHeaderClick(index);
+                });
+            }
+
+            // ヘッダーがクリックされたときの処理
+            function handleHeaderClick(index) {
+                const tableContainer = document.getElementById("table-container");
+                if (!tableContainer) return;
+
+                // tableRow 要素取得（配列に）
+                const rows = Array.from(tableContainer.querySelectorAll(".table-row"));
+
+                // 次のソート状態を決める
+                const current = sortState[index];
+                let nextState;
+                if (current === "desc" || current === "none") nextState = "asc";
+                else if (current === "asc") nextState = "desc";
+
+                // ソート実行
+                const isAsc = nextState === "asc";
+                rows.sort((a, b) => {
+                    // 各行の該当セル（子要素の順が列順と一致する前提）
+                    const aVal = (a.children[index]?.textContent || "").trim();
+                    const bVal = (b.children[index]?.textContent || "").trim();
+
+                    const aNum = Number(aVal);
+                    const bNum = Number(bVal);
+                    if (!Number.isNaN(aNum) && !Number.isNaN(bNum)) {
+                        return isAsc ? aNum - bNum : bNum - aNum;
+                    }
+                    return isAsc ? aVal.localeCompare(bVal) : bVal.localeCompare(aVal);
+                });
+
+                // DOM並べ替え
+                rows.forEach((r) => tableContainer.appendChild(r));
+
+                // 状態保存とアイコン更新
+                sortState[index] = nextState;
+                updateSortIcons(index, nextState);
+            }
+
+            // ヘッダー内のアイコンを更新（ラベルを壊さない）
+            function updateSortIcons(activeIndex, state) {
+                const headers = Array.from(document.querySelectorAll(".table-header div[data-col]"));
+                headers.forEach((el, index) => {
+                    const idx = Number(el.dataset.col);
+                    if (index !== activeIndex) {
+                        el.textContent = el.textContent.replace(/ ▲| ▼/g, ""); // 他列はアイコン消去
+                        return;
+                    }
+
+                    el.textContent = el.textContent.replace(/ ▲| ▼/g, ""); // 既存アイコン消去
+
+                    if (state === "asc") el.textContent += " ▲";
+                    else if (state === "desc") el.textContent += " ▼";
+                });
+            }
         });
 
         document.getElementById("search-btn").addEventListener("click", filterContents);
@@ -271,9 +593,24 @@
                 filterContents();
             }
         });
+
+        function filterTable() {
+            const keyword = document.getElementById("table-search-box").value.toLowerCase();
+            const rows = document.querySelectorAll(".table-row");
+
+            rows.forEach(row => {
+                const text = row.textContent.toLowerCase();
+                if (text.includes(keyword)) {
+                    row.style.display = "";
+                } else {
+                    row.style.display = "none";
+                }
+            });
+        }
+
+
     </script>
     <script type="module" src="../../script/notice/notice.js"></script>
-    <script type="module" src="../../script/contentManager/contentManager.js"></script>
     <script src="../../script/customAlert.js" type="module"></script>
     <script src="../../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
