--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             };
         }
 
-        async function updateLatestImage(baseUrl = 'https://rebecka-unchilled-lisandra.ngrok-free.dev/') {
+        async function updateLatestImage(baseUrl = 'https://mito1-website.loca.lt/') {
             const imgEl = document.getElementById('timetable');
 
             try {
