--- a/member_list/index.html
+++ b/member_list/index.html
@@ -168,7 +168,7 @@
             };
         }
 
-        fetch('https://mito1-website.loca.lt/names.json', {
+        fetch('https://mito1-website.loca.lt/files/names.json', {
             headers: makeHeaders("talus", "talus"),
             cache: "no-store",
         })
