--- a/member_list/index.html
+++ b/member_list/index.html
@@ -163,7 +163,7 @@
             const token = btoa(`${user}:${pass}`);
             return {
                 Authorization: `Basic ${token}`,
-                'ngrok-skip-browser-warning': 'true',
+                'bypass-tunnel-reminder': 'true',
                 'User-Agent': 'CustomClient/1.0',
             };
         }
